gke/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gde
spec:
  selector:
    app: clip-search
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
